2001-12-01  Richard Hestilow  <hestilow@ximian.com>

	* Initial GNOME2 port.

2001-10-18  Jakub Steiner <jimmac@ximian.com>

	* screensaver-capplet.png: fix the icon (bug #61522)

2001-10-13  Richard Hestilow  <hestilow@ximian.com>

	* prefs-widget.c: Backport to GtkCList.
	* checked.xpm, unchecked.xpm: Recreate -- something was messed up.

2001-09-28  Richard Hestilow  <hestilow@ximian.com>

	* preferences.c (preferences_load): Change the default mode to
	"Select One Only" as opposed to Random From List. Fixes bug
	#60762.

2001-09-24  Bradford Hovinen  <hovinen@ximian.com>

	* prefs-widget.c (prefs_widget_class_init): Initialize
	prefs_widget_parent_class
	(prefs_widget_destroy): Add more paranoid checking to make sure we
	aren't derefing a NULL pointer

2001-09-24  Tambet Ingo  <tambet@ximian.com>

	* prefs-widget.c (prefs_widget_init): Fixed to build with new GAL.

2001-08-23  Kai Lahmann  <kl@linuxfaqs.de>

	* screesaver-properties.glade: pwr_conf_dialog had fixed sizes, doh!

2001-08-23  Bradford Hovinen  <hovinen@ximian.com>

	* main.c: Port to new CORBA interface
	(store_archive_data): Don't try to archive the data if the archive
	is NULL

2001-08-19  Abel Cheung  <maddog@linux.org.hk>

	* screensavers/Makefile.am: Added missing DESTDIR to install-data-local
	* screensavers/attraction.xml: Fix of description (even the original
	  xscreensaver description needs fixing)

2001-08-10  Richard Hestilow  <hestilow@ximian.com>

	* capplet/prefs-widget.c (random_timeout_cb): Fix for
	  SM_SELECT_FROM_LIST mode.

2001-08-10  Richard Hestilow  <hestilow@ximian.com>

	* capplets/screensavers/magic.pl.in: Add perms to mkdir.

2001-08-10  Richard Hestilow  <hestilow@ximian.com>

	* Makefile.am (pixmaps_DATA): Remove screen.png,
	  which was commented out anyway.

	* preferences.c (screensaver_clone): Added.
	  (copy_screensavers): Added.
	  (preferences_clone): Copy screensaver list.
	  (screensaver_destroy): Destroy new fields.